--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,35 @@
   height: 100vh;
 }
 text{
-  /* text-shadow: 
-  -1px  -1px 3px white,
-  -1px   1px 3px white,
-   1px  -1px 3px white,
-   1px   1px 3px white; */
   pointer-events: none;
 }
 path{
   fill: none;
   stroke:lightgray;
+}
+.select-file{
+  position: relative;
+  top: 20px;
+  background-color: #0080FF80;
+  border: none;
+  width: 80px;
+  padding: 10px;
+  box-shadow: 1px 1px 5px 1px black;
+  cursor: pointer;
+}
+
+.select-file input[type=file] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90px;
+    height: 35px;
+    outline: none;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.select-file:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
