Adding readme and implementing file selection functionality

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ path{
 .select-file{
   position: relative;
   top: 20px;
-  background-color: #0080FF80;
+  background-color: #0080FF;
   border: none;
   width: 80px;
   padding: 10px;
