--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --blue: #0080FF;
   --grey: lightgray;
+  --green: #fc5858;
   --med-size: 18px;
 }
 
@@ -74,4 +75,27 @@ path{
 }
 .rect-tooltips{
   z-index: 10000;
+}
+.filter-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.filter-slide{
+  width: 73%;
+  
+}
+.filter-btn{
+  width: 22%;
+  background-color: var(--green);
+  color: white;
+  border: none;
+  padding: 5px;
+  box-shadow: 1px 1px 5px 1px black;
+
+}
+.filter-value{
+  font-size: 20px;
 }
