--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,17 @@
   gap: 5px;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow:hidden
 }
 
 .tree-container{
   width: 80%;
   height: 97%;
   border: 1px solid var(--grey);
+  overflow-y:auto;
 }
+
+
 .menu{
   width:20%;
   height: 100%;
