--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,28 @@
   --med-size: 18px;
   --font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
-
+body{
+  background-color: var(--grey);
+  padding: 0;
+  margin: 0;
+}
 .container{
   display: flex;
   gap: 5px;
   width: 100%;
   height: 100vh;
-  overflow:hidden
+  overflow:hidden;
 }
 
 .tree-container{
   width: 80%;
-  height: 97%;
+  height: 100%;
   border: 1px solid var(--grey);
   overflow-y:auto;
+  background-color: white;
+  border-right: 3px solid rgba(71, 71, 71, 0.781);
+  padding: 5px;
 }
-
 
 .menu{
   width:20%;
@@ -30,7 +36,7 @@
   flex-direction: column;
   gap: 20px;
   padding: 5px;
-  
+  background-color: var(--grey);
 }
 .select-file{
   background-color: var(--blue);
