--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 body{
   background-color: var(--grey);
-  padding: 0;
+  padding: 5px;
   margin: 0;
 }
 .container{
@@ -23,6 +23,7 @@ body{
   height: 100%;
   border: 1px solid var(--grey);
   overflow-y:auto;
+  overflow-x: hidden;
   background-color: white;
   border-right: 3px solid rgba(71, 71, 71, 0.781);
   padding: 5px;
@@ -117,4 +118,9 @@ path{
   font-size: 18px;
   font-weight: 500;
   font-family: var(--font-family);
+}
+#searchField{
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
 }
