--- a/css/style.css
+++ b/css/style.css
@@ -93,22 +93,25 @@ path{
   justify-content: center;
   
 }
-.year-filter-container, .frequency-filter-container{
+
+ .year-filter-container, .frequency-filter-container{
   display: flex;
   gap: 10px;
 }
+
 
 .year-filter-slide, .frequency-filter-slide{
   flex: 2;
 }
 
-
 .year-filter-value, .frequency-filter-value{
-  font-size: 20px;
-  font-family: var(--font-family);
-  flex: 1;
+  flex: 2;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+.min-year-filter-value, .max-year-filter-value{
+  font-size: 18px;
+  font-family: var(--font-family);
 }
 .year-filter, .frequency-filter{
   font-size: 18px;
@@ -117,7 +120,60 @@ path{
   flex: 1;
   display: flex;
   justify-content: center;
+} 
+
+.double-slider {
+  position: relative;
+  top: 25px;
+  flex: 2;
 }
+
+.double-slider input[type="range"] {
+  position: absolute;
+  width: 100%;
+  pointer-events: none;
+  -webkit-appearance: none;
+  appearance: none;
+  z-index: 2;
+  background: none;
+}
+
+.double-slider input[type="range"]::-webkit-slider-thumb {
+  position: relative;
+  bottom: 5px;
+  pointer-events: all;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  background: var(--blue);
+  cursor: pointer;
+}
+
+.double-slider input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  background: #ffffff;
+  border-radius: 3px;
+  border: none;
+}
+
+.double-slider input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 45px;
+  background: #ffffff;
+  border-radius: 3px;
+  border: none;
+}
+
+#max-year-slider::-webkit-slider-runnable-track {
+  background: none;
+}
+
+#max-year-slider::-moz-range-track {
+  background: none;
+}
+
 input[type='range']{ accent-color: var(--blue); }
 
 #searchField{
