--- a/css/style.css
+++ b/css/style.css
@@ -142,12 +142,13 @@ path{
   position: relative;
   bottom: 5px;
   pointer-events: all;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
+  width: 5px;
+  height: 20px;
+  border-radius: 20%;
   -webkit-appearance: none;
   background: var(--blue);
   cursor: pointer;
+  box-shadow: 1px 1px 4px 1px black;
 }
 
 .double-slider input[type="range"]::-webkit-slider-runnable-track {
@@ -158,23 +159,13 @@ path{
   border: none;
 }
 
-.double-slider input[type="range"]::-moz-range-track {
-  width: 100%;
-  height: 45px;
-  background: #ffffff;
-  border-radius: 3px;
-  border: none;
-}
-
 #max-year-slider::-webkit-slider-runnable-track {
   background: none;
 }
 
-#max-year-slider::-moz-range-track {
-  background: none;
-}
-
-input[type='range']{ accent-color: var(--blue); }
+input[type='range']{
+   accent-color: var(--blue)
+   }
 
 #searchField{
   padding: 15px;
