Adding force and building server with python

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
   <title>network</title>
 </head>
 <body>
@@ -76,14 +76,15 @@
 </div>
 
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="./js/Home.js"></script>
-  <script src="./js/filtering.js"></script>
-  <script src="./js/notification.js"></script>
-  <script src="./js/search.js"></script>
-  <script src="./js/rightClick.js"></script>
-  <script src="./js/timeLine.js"></script>
-  <script src="./js/chart.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="../static/js/Tree.js"></script>
+  <script src="../static/js/ForceSimulation.js"></script>
+  <script src="./static/js/filtering.js"></script>
+  <script src="./static/js/notification.js"></script>
+  <script src="./static/js/search.js"></script>
+  <script src="./static/js/rightClick.js"></script>
+  <script src="./static/js/timeLine.js"></script>
+  <script src="./static/js/chart.js"></script>
+  <script src="./static/js/main.js"></script>
 
 </body>
 </html>
