--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,3 +278,15 @@ input[type="color"]::-webkit-color-swatch {
   border-right: 5px solid rgb(0, 133, 11);
   border-left: 5px solid rgb(0, 133, 11);
 }
+
+#mode-btn{
+  position: relative;
+  right: 0;
+  padding: 5px;
+  background-color: var(--red);
+  color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px 1px black;
+  cursor: pointer;
+  outline: none;
+}
