--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,14 @@
           <p class="frequency-filter-value">-</p>
         </div>
       </div>
+      <div class="degree-container">
+        <select class="degree-selection" name="degree" id="degree">
+          <option value="degree">Degree</option>
+          <option value="in_degree">In_degree</option>
+          <option value="out_degree">Out_degree</option>
+
+        </select>
+      </div>
       <div class="timeline-animation-container">
         <select name="animation-type" id="animation-type">
           <option selected disabled>Animation</option>
