Adding checkbox to show and hide the labels

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,9 @@
           <input type="range" id="timeSlider" min="0" max="100" value="0">
         </div>
       </div>
+      <div class="show-labels-container">
+        <input type="checkbox" id="labels">Show Labels
+      </div>
       <div id="chart"></div>
     </div>
 </div>
