--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
           <option value="force">Force Mode</option>
           <option value="tree">Tree Mode</option>
         </select>
+        <button class="reset-btn">Reset</button>
       </div>
     </div>
     <div class="menu">
