--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,9 @@
       <div class="show-labels-container">
         <input type="checkbox" id="labels">Show Labels
       </div>
+      <div class="show-frequencies-container">
+        <input type="checkbox" id="frequencies" checked>Show Frequencies
+      </div>
       <div id="chart"></div>
     </div>
 </div>
