Displaying Reingold structure and changing the default selection of the degree to be not specified

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,7 @@
       </div>
       <div class="degree-container">
         <select class="degree-selection" name="degree" id="degree">
+          <option value="Not-specified">Not-specified</option>
           <option value="degree">Degree</option>
           <option value="in_degree">In_degree</option>
           <option value="out_degree">Out_degree</option>
